swagger doc for all api methods
